# tangent

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  build.sh  config.toml  dist-workspace.toml  ecs-task-definition.json  test-sidecar.sh  vector.yaml
.cargo/: config.toml
.github/workflows/: bench.yml  docker.yml  release.yml  scaffold_test.yml
assets/: go_Agents.md  go_setup.sh  py_Agents.md  py_setup.sh  rust_setup.sh
assets/wit/: processor.wit  tangent:logs@0.1.0.wasm
bench/: Cargo.toml
bench/src/: main.rs
bench/test_data/: cloudtrail.json  eks.json  syslog.json
crates/bench/: Cargo.toml  tangent.yaml
crates/bench/src/: lib.rs  main.rs  metrics.rs  msk.rs  socket.rs  sqs.rs  synthesize.rs  tcp.rs
crates/bench/test_data/: cloudtrail.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  scaffold.rs  test.rs  wit_assets.rs
crates/compile-wasm/: Cargo.toml
crates/compile-wasm/src/: lib.rs  main.rs
crates/light-node/: Cargo.toml
crates/light-node/src/: main.rs  wasm.rs  worker.rs
crates/light-node/src/consumers/: mod.rs  msk.rs  socket.rs  sqs.rs
crates/light-node/src/sinks/: manager.rs  mod.rs  s3.rs  wal.rs
crates/light-node/src/sources/: msk.rs  sqs.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  dag.rs  lib.rs  mod.rs  msk.rs  plugins.rs  runtime.rs  s3.rs  socket.rs  source.rs  sqs.rs  wasm_engine.rs
crates/shared/src/sinks/: blackhole.rs  common.rs  file.rs  mod.rs  s3.rs
crates/shared/src/sources/: common.rs  file.rs  github_webhook.rs  mod.rs  msk.rs  npm_registry.rs  socket.rs  sqs.rs  tcp.rs
crates/tangent/: Cargo.toml
crates/tangent/src/: cache.rs  dag.rs  lib.rs  main.rs  router.rs  wasm.rs  worker.rs
crates/tangent/src/sinks/: blackhole.rs  encoding.rs  file.rs  manager.rs  mod.rs  s3.rs  wal.rs
crates/tangent/src/sources/: decoding.rs  file.rs  github_webhook.rs  mod.rs  msk.rs  npm_registry.rs  socket.rs  sqs.rs  tcp.rs
crates/tangent/src/wasm/: arena.rs  engine.rs  host.rs  mapper.rs  mod.rs  probe.rs
docker/runtime/: Dockerfile
docker/toolchain/: .dockerignore  Dockerfile
examples/: ecs-task-definition.json  log-processor.wat
examples/basic-go/: go.mod  go.sum  hello_world.go  tangent.yaml  wrapper.go
examples/detection/: .gitignore  README.md  cache.sqlite  go.mod  go.sum  json_generated.go  main.go  tangent.yaml
examples/detection/internal/tangent/logs/cache/: abi.go  cache.wit.go
examples/detection/internal/tangent/logs/mapper/: mapper.wit.go
examples/detection/internal/wasi/cli/stderr/: stderr.wit.go
examples/detection/internal/wasi/cli/stdin/: stdin.wit.go
examples/detection/internal/wasi/cli/stdout/: stdout.wit.go
examples/detection/internal/wasi/cli/terminal-stderr/: terminal-stderr.wit.go
examples/detection/internal/wasi/cli/terminal-stdin/: terminal-stdin.wit.go
examples/detection/internal/wasi/cli/terminal-stdout/: terminal-stdout.wit.go
examples/detection/internal/wasi/clocks/monotonic-clock/: monotonic-clock.wit.go
examples/detection/internal/wasi/filesystem/preopens/: preopens.wit.go
examples/detection/internal/wasi/filesystem/types/: abi.go  types.wit.go
examples/detection/internal/wasi/io/streams/: streams.wit.go
examples/detection/internal/wasi/sockets/instance-network/: instance-network.wit.go
examples/detection/internal/wasi/sockets/ip-name-lookup/: ip-name-lookup.wit.go
examples/detection/internal/wasi/sockets/tcp/: abi.go  tcp.wit.go
examples/detection/internal/wasi/sockets/tcp-create-socket/: tcp-create-socket.wit.go
examples/detection/internal/wasi/sockets/udp/: abi.go  udp.wit.go
examples/detection/internal/wasi/sockets/udp-create-socket/: udp-create-socket.wit.go
examples/detection/tests/: expected.json
examples/enrichment/: README.md  go.mod  go.sum  json_generated.go  main.go  tangent.yaml
examples/enrichment/.tangent/wit/: processor.wit
examples/enrichment/tests/: expected.json  input.json
examples/githubwebhooks/: README.md  go.mod  json_generated.go  main.go  repos.json  tangent.yaml
examples/golang/: README.md  go.mod  go.sum  json_generated.go  main.go  my_output.go  tangent.yaml
examples/golang/tangenthelpers/: helpers.go
examples/golang/tests/: expected.json  input.json
examples/npmpackageupdates/: .gitignore  README.md  go.mod  go.sum  main.go  tangent.yaml
examples/npmpackageupdates/.tangent/wit/: processor.wit
examples/ocsf-go/: go.mod  go.sum  main.go  tangent.yaml  wrapper.go
examples/ocsf-go/mappers/: cloudtrail.go  eks.go  syslog.go
examples/ocsf-go/row/: row.go
examples/python/: .gitignore  Agents.md  Makefile  README.md  mapper.py  pyproject.toml  requirements.txt  tangent.yaml
examples/python/tests/: expected.json
examples/python/wit_world/exports/: __init__.py  mapper.py
examples/python/wit_world/imports/: insecure.py  insecure_seed.py  instance_network.py  ip_name_lookup.py  log.py  monotonic_clock.py  network.py  preopens.py  random.py  streams.py  tcp.py  tcp_create_socket.py  types.py  udp.py  udp_create_socket.py  wall_clock.py
examples/rust/: .gitignore  Agents.md  Cargo.toml  Makefile  README.md  expanded  setup.sh  tangent.yaml
examples/rust-log-processor/: Cargo.toml  build-wasm.sh
examples/rust-log-processor/src/: lib.rs
examples/rust/.tangent/wit/: processor.wit
examples/rust/src/: bindings.rs  lib.rs
examples/vector-sink/: ecs-task-definition.json  hello_world.py  interface.wit  tangent.yaml  test.sh  vector.toml
examples/zeek/: .gitignore  Makefile  README.md  go.mod  go.sum  json_generated.go  main.go  tangent.yaml  wrapper.go
examples/zeek/mappers/: conn.go  dns.go  helpers.go
examples/zeek/tangenthelpers/: helpers.go
examples/zeek/tests/: conn_out.json
light-node/: Cargo.toml  build.sh  config.toml  test-sidecar.sh
light-node/src/: main.rs  wasm.rs
scripts/: extract_bench.py
src/: main.rs
tools/compile-wasm/: Cargo.toml
tools/compile-wasm/src/: lib.rs  main.rs
tools/wasm-shim/: Cargo.toml
wit/: deps.toml  imports.wit  interface.wit  processor.wit  tangent:logs@0.1.0.wasm
(+90 files in other folders)
