[workspace]
members = [ "crates/bench","crates/tangent", "crates/compile-wasm", "crates/shared", "crates/cli"]
resolver = "2"

[workspace.dependencies]
prometheus = "0.13.4"
prometheus_exporter = "0.8.5"
lazy_static = "1"

[workspace.package]
version = "0.1.2"
edition = "2021"
repository = "https://github.com/telophasehq/tangent"
homepage = "https://github.com/telophasehq/tangent"
documentation = "https://github.com/telophasehq/tangent"
readme = "README.md"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
debug = true
