[workspace]
members = [ "crates/bench","crates/tangent", "crates/compile-wasm", "crates/shared", "crates/cli"]
resolver = "2"

[workspace.dependencies]
prometheus = "0.13.4"
prometheus_exporter = "0.8.5"
lazy_static = "1"
wasmtime      =  { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "b676f1e7779410648cd77b2e43b5be58603797f8"}
wasmtime-wasi =  { git = "https://github.com/bytecodealliance/wasmtime.git", rev = "b676f1e7779410648cd77b2e43b5be58603797f8" }

[workspace.package]
version = "0.1.9"
edition = "2021"
repository = "https://github.com/telophasehq/tangent"
homepage = "https://github.com/telophasehq/tangent"
documentation = "https://github.com/telophasehq/tangent"
readme = "README.md"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.profiling]
inherits = "release"
debug = 2                    
strip = "none"               
split-debuginfo = "unpacked"
lto = "off"                  
codegen-units = 1             
opt-level = 3              
panic = "unwind"

[profile.profiling.package."*"]
debug = 2
