[package]
name = "tangent-bench"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
reqwest = "0.12.23"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
prometheus = { workspace = true }
prometheus_exporter = { workspace = true }
lazy_static = { workspace = true }
hdrhistogram = "7.5.4"
futures = "0.3.31"
tangent-shared = { path = "../shared" }
rdkafka = { version = "0.38.0", features = ["cmake-build", "ssl"] }
bytes = "1.10.1"
aws-sdk-s3 = "1.106.0"
aws-sdk-sqs = "1.84.1"
aws-config = "1.8.6"
chrono = "0.4.42"
prometheus-parse = "0.2.5"
secrecy = { version = "0.10.3", features = ["serde"] }

