[package]
name = "tangent-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
compile-wasm = { path = "../compile-wasm" }
bench = { path = "../bench" }
tangent_runtime = { path = "../tangent", package = "tangent-runtime" }
tangent_shared = { path = "../shared", package = "tangent-shared" }
tokio = "1.47.1"
anyhow = "1.0.100"
tracing-subscriber = "0.3.20"

[[bin]]
name = "tangent"
path = "src/main.rs"
