[package]
name = "tangent-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[features]
alloc-prof = ["dep:libc", "dep:tikv-jemalloc-ctl"]

[dependencies]
clap = { version = "4", features = ["derive"] }
compile-wasm = { path = "../compile-wasm" }
tangent_runtime = { path = "../tangent", package = "tangent-runtime" }
tangent_shared = { path = "../shared", package = "tangent-shared" }
tangent_bench = { path = "../bench", package = "tangent-bench" }
tokio = "1.47.1"
anyhow = "1.0.100"
tracing-subscriber = "0.3.20"
include_dir = { version = "0.7.4", features = ["glob"] }
handlebars = "6.3.2"
serde_json = "1.0.145"
tempfile = "3.23.0"
tracing = "0.1.41"
serde_yaml = "0.9.34"
tikv-jemallocator = { version = "0.6.1", features = ["profiling"] }
tikv-jemalloc-ctl = {version = "0.6.1", features = ["stats", "profiling"], optional=true}
libc = {version = "0.2.177", optional=true}

[[bin]]
name = "tangent"
path = "src/main.rs"
