[package]
name = "compile-wasm"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0.99"
fs_extra = "1.3.0"
tempfile = "3.21.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
which = "8.0.0"
clap = { version = "4.5.47", features = ["derive"] }
tangent_shared = { path = "../shared", package = "tangent-shared" }
wasmtime      =  { workspace = true }
