[package]
name = "light-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
wasmtime      =  "34.0.2"
wasmtime-wasi =  "34.0.2"
docker-api = "0.14"
futures = "0.3"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
num_cpus = "1.17.0"
prometheus = { workspace = true }
prometheus_exporter = { workspace = true }
lazy_static = { workspace = true }
clap = { version = "4.5.48", features = ["derive"] }
serde_yaml = "0.9.34"
tangent-shared = { path = "../shared" }
rdkafka = "0.38.0"
bytes = "1.10.1"
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
