[package]
name = "light-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
wasmtime      =  "34.0.2"
wasmtime-wasi =  "34.0.2"
docker-api = "0.14"
futures = "0.3"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
num_cpus = "1.17.0"
prometheus = { workspace = true }
prometheus_exporter = { workspace = true }
lazy_static = { workspace = true }
clap = { version = "4.5.48", features = ["derive"] }
serde_yaml = "0.9.34"
tangent-shared = { path = "../shared" }
rdkafka = { version = "0.38.0", features = ["cmake-build", "ssl"] }
bytes = "1.10.1"
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
aws-sdk-sqs = "1.84.1"
aws-config = "1.8.6"
async-trait = "0.1.89"
aws-smithy-types = { version = "1.3.2", features = ["byte-stream-poll-next"] }
aws-sdk-s3 = "1.106.0"
memchr = "2.7.6"
