[package]
name = "tangent-shared"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[lib]
name = "tangent_shared"
path = "src/config.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
num_cpus = "1.17.0"
rmp-serde = "1.3.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.227", features = ["derive", "rc"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
wasmtime      =  { workspace = true }
wasmtime-wasi      =  { workspace = true }
