[package]
name = "tangent-runtime"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

[lib]
name = "tangent_runtime"
path = "src/lib.rs"

[[bin]]
name = "tangentd"
path = "src/main.rs"

[features]
alloc-prof = ["dep:libc", "dep:tikv-jemalloc-ctl"]

[dependencies]
tokio = { version = "1.0", features = ["full", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
wasmtime      =  { workspace = true }
wasmtime-wasi =  { workspace = true }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
num_cpus = "1.17.0"
prometheus = { workspace = true }
prometheus_exporter = { workspace = true }
lazy_static = { workspace = true }
clap = { version = "4.5.48", features = ["derive"] }
serde_yaml = "0.9.34"
tangent_shared = { path = "../shared", package = "tangent-shared" }
rdkafka = { version = "0.38.0", features = ["cmake-build", "ssl-vendored"] }
bytes = "1.10.1"
chrono = { version = "0.4", features = ["clock"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
aws-sdk-sqs = "1.84.1"
aws-config = "1.8.6"
async-trait = "0.1.89"
aws-smithy-types = { version = "1.3.2", features = ["byte-stream-poll-next"] }
aws-sdk-s3 = "1.106.0"
memchr = "2.7.6"
futures-util = { version = "0.3.31", features = ["sink"] }
ulid = "1.2.1"
rand = "0.9.2"
aws-smithy-http = "0.62.3"
aws-smithy-runtime-api = "1.9.0"
tracing-appender = "0.2.3"
zstd = "0.13.3"
flate2 = "1.1.2"
secrecy = "0.10.3"
rmp-serde = "1.3.0"
serde-transcode = "1.1.1"
base64 = "0.22.1"
ahash = "0.8.12"
percent-encoding = "2.3.2"
regex = "1.12.2"
console-subscriber = "0.4.1"
simd-json = "0.17.0"
parking_lot = "0.12.5"
apache-avro = { version = "0.17.0", features = ["zstandard", "snappy"] }
parquet = "57.0.0"
arrow-json = "57.0.0"
arrow-schema = { version = "57.0.0", features = ["serde"] }
arrow-ipc = "57.0.0"
tikv-jemallocator = { version = "0.6.1", features = ["profiling"] }
tikv-jemalloc-ctl = {version = "0.6.1", features = ["stats", "profiling"], optional=true}
libc = {version = "0.2.177", optional=true}
reqwest = "0.12.24"
rusqlite = { version = "0.32.1", features = ["bundled"] }
fs2 = "0.4.3"
once_cell = "1.21.3"
sha2 = "0.10.9"
axum = "0.7.9"
http-body-util = "0.1.2"
hmac = "0.12.1"
zip = "6.0.0"
hex = "0.4.3"
constant_time_eq = "0.2.6"
