[package]
name = "compile-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
fs_extra = "1.3.0"
tempfile = "3.21.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.5.0"
which = "8.0.0"
dunce = "1.0.5"
clap = { version = "4.5.47", features = ["derive"] }
